[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Art/title.png" type="Texture" id=2]
[ext_resource path="res://Art/sky.png" type="Texture" id=3]
[ext_resource path="res://MainSong.ogg" type="AudioStream" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Score: 0 Gold"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Depth" type="Label" parent="."]
margin_left = 0.793701
margin_top = 23.0173
margin_right = 85.7937
margin_bottom = 37.0173
text = "Depth 0m"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CanvasModulate" parent="."]
position = Vector2( 1.41431, 1.41425 )

[node name="Label" type="Label" parent="Menu"]
visible = false
margin_left = -1.41431
margin_top = 54.5858
margin_right = 1014.59
margin_bottom = 340.586
text = "Created by Alex Dawn for Ludum Dare 48

    This game uses Godot Engine, available under the following license:

    Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2021 Godot Engine contributors.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Menu"]
visible = false
position = Vector2( 509.117, 302.642 )
scale = Vector2( 20, 10 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 515.089, 139.292 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 478.586
margin_top = 414.586
margin_right = 519.586
margin_bottom = 434.586
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 478.586
margin_top = 374.586
margin_right = 542.586
margin_bottom = 394.586
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 478.586
margin_top = 486.586
margin_right = 518.586
margin_bottom = 506.586
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 478.586
margin_top = 454.586
margin_right = 518.586
margin_bottom = 474.586
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="Menu"]
margin_left = 62.5857
margin_top = 510.586
margin_right = 222.586
margin_bottom = 526.586
value = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Music"]
margin_left = -48.0
margin_right = -6.0
margin_bottom = 14.0
text = "Music:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="HSlider" parent="Menu"]
margin_left = 62.5857
margin_top = 542.586
margin_right = 222.586
margin_bottom = 558.586
value = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Audio"]
margin_left = -48.0
margin_right = -8.0
margin_bottom = 14.0
text = "SFX:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="button_down" from="Menu/CreditsButton" to="." method="_on_CreditsButton_button_down"]
[connection signal="value_changed" from="Menu/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Menu/Audio" to="." method="_on_Audio_value_changed"]
